--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,14 +53,14 @@ dependencies:
   auto_size_text: ^3.0.0
   speech_to_text:
   clipboard: ^0.1.3
-  cloud_firestore: 4.8.0
+  cloud_firestore: ^4.8.5
   settings_ui:
   path_provider:
   line_awesome_flutter: ^2.0.0
   flutter_screenutil: ^5.1.1
   google_sign_in:
   sign_button: ^2.0.2
-  date_count_down: ^2.1.0
+  date_count_down: ^3.0.0
   hijri: ^3.0.0
   http:
   flutter_facebook_auth:
